# MSFplayer

./: .gitignore  BundleInfo.plist.in  CMakeLists.txt  CreateDMG.sh  slider.cpp  slider.hpp
header/: brightnessdialog.hpp  decoder.hpp  initialdialog.h  inspector.hpp  mainwindow.h  saveframesdialog.hpp  videowidget.h
resources/: icon.icns
source/: brightnessdialog.cpp  brightnessdialog.hpp  brightnessdialog.ui  decoder.cpp  decoder.hpp  includeffmpeg.h  initialdialog.cpp  initialdialog.ui  inspector.cpp  inspector.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  saveframesdialog.cpp  saveframesdialog.ui  slider.cpp  slider.hpp  videowidget.cpp
unused sources/: slider.cpp  slider.hpp
